testinga av propernouns fungerer ikkje

--- a/test/src/morphology/Makefile.am
+++ b/test/src/morphology/Makefile.am
@@ -11,7 +11,6 @@ TESTS=tag_test.sh
 # Add your shell scripts for running tests requiring only a generator:
 GENERATION_TESTS_IN=generate-adjective-lemmas.sh.in  \
                     generate-noun-lemmas.sh.in       \
-                    generate-propernoun-lemmas.sh.in \
                     generate-verb-lemmas.sh.in
 
 GENERATION_TESTS=$(basename $(GENERATION_TESTS_IN))
@@ -23,8 +22,7 @@ endif # WANT_GENERATION
 # List tests that are presently (expected) failures here, ie things that should
 # be fixed *later*, but is not critical at the moment:
 XFAIL_TESTS=generate-adjective-lemmas.sh  \
-            generate-noun-lemmas.sh       \
-            generate-propernoun-lemmas.sh
+            generate-noun-lemmas.sh       
 
 # Make sure all tests scripts are included in the distributed tarballs:
 EXTRA_DIST=$(TESTS) $(GENERATION_TESTS_IN)
