--- a/src/morphology/Makefile.am
+++ b/src/morphology/Makefile.am
@@ -24,6 +24,7 @@ GT_LEXC_ROOT=$(srcdir)/root.lexc
 # Set this to the names of all regular lexc source files:
 GT_LEXC_SRCS_L1_L2=\
 			 compounding.lexc         \
+			 affixes/abbreviations.lexc  \
 			 affixes/acronyms.lexc  \
 			 affixes/adjectives.lexc  \
 			 affixes/nouns.lexc       \
