[Template merge - langs/und] Reorganised mt/apertium make files so that fixed content is in Makefile.am, and userj-editable content is in Makefile.modifications.am.
git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@189382 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/tools/mt/apertium/Makefile.modifications.am
+++ b/tools/mt/apertium/Makefile.modifications.am
@@ -2,8 +2,14 @@
 ## Copyright: Sámediggi/Divvun/UiT
 ## Licence: GPL v3+
 
-# Process subdirs first:
-SUBDIRS = filters tagsets .
+####### Additional Automake targets: ########
+if WANT_APERTIUM
+
+APERTIUM_ANALYSERS_ATTGZ+=
+APERTIUM_GENERATOR_ATTGZ+=
+
+endif # WANT_APERTIUM
+
 
 ##################################################################
 #### Specify target languages and corresponding file names:   ####
@@ -15,28 +21,15 @@ APERTIUM_TARGET_LANGS=und
 APERTIUM_TARGET_LANG_NAME=apertium-und
 
 ##################################################################
+#### Variable assignments:
+# Add files to be removed by `make clean`
+CLEAN_FILES+=
+
+##################################################################
 #### Specify CG3 source files, main and included ones:        ####
 ##################################################################
 APERTIUM_CG_SRC=
-
 APERTIUM_CG_INCLUDE_SRC=
 
 ##################################################################
-#### BEGIN: Add local processing instructions BELOW this line ####
-##################################################################
-
-
-##################################################################
-#### END: Add local processing instructions ABOVE this line ######
-##################################################################
-
-####### Other targets: ###########
-
-# cleaning
-clean-local:
-	-rm -f *.hfst *.gz *.cg3 *.bin *.hfstol
-
-##########################################
-# General build rules included from here:#
-
-include $(top_srcdir)/am-shared/tools-mt-apertium-dir-include.am
+#### Build rules - add targets and their build rules below:
