--- a/tools/mt/Makefile.modifications.am
+++ b/tools/mt/Makefile.modifications.am
@@ -2,11 +2,22 @@
 ## Copyright: Sámediggi/Divvun/UiT
 ## Licence: GPL v3+
 
-SUBDIRS = filters . apertium cgbased
+####### Additional Automake targets: ########
+if WANT_APERTIUM
+
+APERTIUM_ANALYSER_HFST+=analyser-mt-gt-desc.hfst
+APERTIUM_GENERATORS_HFST+=generator-mt-gt-norm.hfst
+
+endif # WANT_APERTIUM
+
 
 ##################################################################
-#### BEGIN: Add local processing instructions BELOW this line ####
+#### Variable assignments:
+# Add files to be removed by `make clean`
+CLEAN_FILES+=
+
 ##################################################################
+#### Build rules - add targets and their build rules below:
 
 # We want to rename the POS tags in front of derivations:
 analyser-mt-gt-desc.hfst: analyser-mt-gt-desc.tmp.hfst \
@@ -17,18 +28,3 @@ analyser-mt-gt-desc.hfst: analyser-mt-gt-desc.tmp.hfst \
 			-S --xerox-composition=ON \
 		| $(HFST_INVERT) $(HFSTFLAGS) \
 		-o $@
-
-##################################################################
-#### END: Add local processing instructions ABOVE this line ######
-##################################################################
-
-####### Other targets: ###########
-
-# cleaning
-clean-local:
-	-rm -f *.hfst *.hfstol *.xfst *.foma
-
-##########################################
-# General build rules included from here:#
-
-include $(top_srcdir)/am-shared/tools-mt-dir-include.am
