Updated references to renamed giella-shared dirs in the local build rules.

--- a/src/fst/Makefile.am
+++ b/src/fst/Makefile.am
@@ -94,13 +94,13 @@ GT_DISTRO_SRCS=
 GIELLA_LOCAL_TARGETS=
 
 generated_files/arabic_roman_digits.lexc: \
-			$(GIELLA_SHARED)/smi/src/morphology/stems/arabic_roman_digits.lexc
+			$(GIELLA_SHARED)/smi/src/fst/stems/arabic_roman_digits.lexc
 	$(AM_V_at)$(MKDIR_P) generated_files
 	$(AM_V_GEN)cp -f $< $@
 
 
 generated_files/%.lexc: \
-			$(GIELLA_SHARED)/smi/src/morphology/stems/%.lexc
+			$(GIELLA_SHARED)/smi/src/fst/stems/%.lexc
 	$(AM_V_at)$(MKDIR_P) generated_files
 	$(AM_V_GEN)cp -f $< $@
 
