[Template merge - langs/und] Step three in flattening the tools/spellcheckers/ dir tree: changing the relocated build files to adapt to their new home.

--- a/tools/spellcheckers/filters/Makefile.mod-fstbased-filters.am
+++ b/tools/spellcheckers/filters/Makefile.mod-fstbased-filters.am
@@ -7,11 +7,11 @@
 ##################################################################
 
 # List any local additions here:
-GT_LOCAL_FSTSPELLER_FILTER_SRCS=
+GT_LOCAL_FSTSPELLER_FILTER_SRCS=\
 
 # Source files copied from src/filters/ OR from
 # $(GIELLA_SHARED)/all_langs/tools/spellcheckers/fstbased/filters:
-GT_LOCAL_COPY_FILTER_SRCS=\
+GT_LOCAL_COPY_FILTER_SRCS+=\
 	convert_to_flags-CmpNP-tags.regex \
 	split-CmpNP-tags.regex
 
@@ -19,18 +19,8 @@ GT_LOCAL_COPY_FILTER_SRCS=\
 if WANT_SPELLERS
 
 # List generated regexes here:
-GENERATED_REGEXES=
+GENERATED_REGEXES+=
 
 endif # WANT_SPELLERS
 
 # Add the build code of local additions here:
-
-##################################################################
-#### END: Add local processing instructions ABOVE this line ######
-##################################################################
-
-####### Other targets: ###########
-clean-local:
-	-rm -f *.hfst *.xfst
-
-include $(top_srcdir)/am-shared/tools-spellcheckers-fstbased-filters-dir-include.am
