[Template merge - langs/und] Fix automakefile error: no final backslash followed by an empty line.

--- a/tools/spellcheckers/filters/Makefile.mod-fstbased-filters.am
+++ b/tools/spellcheckers/filters/Makefile.mod-fstbased-filters.am
@@ -7,7 +7,7 @@
 ##################################################################
 
 # List any local additions here:
-GT_LOCAL_FSTSPELLER_FILTER_SRCS=\
+GT_LOCAL_FSTSPELLER_FILTER_SRCS=
 
 # Source files copied from src/filters/ OR from
 # $(GIELLA_SHARED)/all_langs/tools/spellcheckers/fstbased/filters:
