[Template merge - langs/und] The final mmove in the old svn infra: change the am-shared reference to point to giella-core parallel to the language dir. After this we can remove am-shared from each language.
git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@191046 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -38,4 +38,4 @@ JSP_PAGES=root-morphology.jspwiki  \
 # subjunctions-stems.jspwiki       \
 # adjectives-affixes.jspwiki       \
 # propernouns-affixes.jspwiki      \
-include $(top_srcdir)/am-shared/doc-dir-include.am
+include $(top_srcdir)/../giella-core/am-shared/doc-dir-include.am
