--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -191,4 +191,4 @@ morpher-gt-desc.%: morpher-gt-desc.tmp.% \
 #### END: Add local processing instructions ABOVE this line ######
 ##################################################################
 
-include $(top_srcdir)/am-shared/src-dir-include.am
+include $(top_srcdir)/../giella-core/am-shared/src-dir-include.am
