Adjusted tags to fst.

--- a/test/src/gt-norm-yamls/V-s10_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s10_gt-norm.yaml
@@ -15,7 +15,7 @@ Tests:
     elgja+V+Ind+Prt+Sg: elgdi
     elgja+V+Ind+Prt+Pl: elgdu
     elgja+V+Sup: elgt
-    elgja+V+PrfPrc: elgdur
+    elgja+V+PrfPrc+Msc+Sg+Nom+Indef: elgdur
 
   Verb - belgja: # 
     belgja+V+Inf: belgja
@@ -23,4 +23,4 @@ Tests:
     belgja+V+Ind+Prt+Sg: belgdi
     belgja+V+Ind+Prt+Pl: belgdu
     belgja+V+Sup: belgt
-    belgja+V+PrfPrc: belgdur
+    belgja+V+PrfPrc+Msc+Sg+Nom+Indef: belgdur
