--- a/test/src/gt-norm-yamls/V-s11_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s11_gt-norm.yaml
@@ -22,4 +22,4 @@ Tests:
     roykja+V+Ind+Prt+Sg: roykti
     roykja+V+Ind+Prt+Pl: royktu
     roykja+V+Sup: roykt
-    roykja+V+PrfPrc: royktur
+    roykja+V+PrfPrc+Msc+Sg+Nom+Indef: royktur
