--- a/test/src/gt-norm-yamls/V-s13_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s13_gt-norm.yaml
@@ -15,4 +15,4 @@ Tests:
     søkja+V+Ind+Prt+Sg: søkti
     søkja+V+Ind+Prt+Pl: søktu
     søkja+V+Sup: søkt
-    søkja+V+PrfPrc: søktur
+    søkja+V+PrfPrc+Msc+Sg+Nom+Indef: søktur
