--- a/test/src/gt-norm-yamls/V-s16_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s16_gt-norm.yaml
@@ -15,4 +15,4 @@ Tests:
     flekja+V+Ind+Prt+Sg: flakti
     flekja+V+Ind+Prt+Pl: flaktu
     flekja+V+Sup: flakt
-    flekja+V+PrfPrc: flaktur
+    flekja+V+PrfPrc+Msc+Sg+Nom+Indef: flaktur
