--- a/test/src/gt-norm-yamls/V-s17_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s17_gt-norm.yaml
@@ -14,5 +14,5 @@ Tests:
     berja+V+Ind+Prt+Sg: bardi
     berja+V+Ind+Prt+Pl: bardu
     berja+V+Sup: bart
-    berja+V+PrfPrc: bardur
+    berja+V+PrfPrc+Msc+Sg+Nom+Indef: bardur
     berja+V+Inf: berja
