--- a/test/src/gt-norm-yamls/V-s18x16_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s18x16_gt-norm.yaml
@@ -13,4 +13,4 @@ Tests:
     vekja+V+Ind+Prt+Sg: vakti
     vekja+V+Ind+Prt+Pl: vaktu
     vekja+V+Sup: vakt
-    vekja+V+PrfPrc: vaktur
+    vekja+V+PrfPrc+Msc+Sg+Nom+Indef: vaktur
