--- a/test/src/gt-norm-yamls/V-s19_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s19_gt-norm.yaml
@@ -15,4 +15,4 @@ Tests:
     dylja+V+Ind+Prt+Sg: duldi
     dylja+V+Ind+Prt+Pl: duldu
     dylja+V+Sup: dult
-    dylja+V+PrfPrc: duldur
+    dylja+V+PrfPrc+Msc+Sg+Nom+Indef: duldur
