--- a/test/src/gt-norm-yamls/V-s1_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s1_gt-norm.yaml
@@ -15,4 +15,4 @@ Tests:
     baga+V+Ind+Prt+Sg: bagdi
     baga+V+Ind+Prt+Pl: bagdu
     baga+V+Sup: bagt
-    baga+V+PrfPrc: bagdur
+    baga+V+PrfPrc+Msc+Sg+Nom+Indef: bagdur
