--- a/test/src/gt-norm-yamls/V-s1x26_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s1x26_gt-norm.yaml
@@ -15,4 +15,4 @@ Tests:
     mála+V+Ind+Prt+Sg: [máldi, málaði]
     mála+V+Ind+Prt+Pl: [máldu, málaðu]
     mála+V+Sup: [mált, málað]
-    mála+V+PrfPrc: [máldur, málaður]
+    mála+V+PrfPrc+Msc+Sg+Nom+Indef: [máldur, málaður]
