--- a/test/src/gt-norm-yamls/V-s1x30_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s1x30_gt-norm.yaml
@@ -15,7 +15,7 @@ Tests:
     læga+V+Ind+Prt+Sg: lægdi, lægaði]
     læga+V+Ind+Prt+Pl: [lægdu, lægaðu]
     læga+V+Sup: [lægt, lægað]
-    læga+V+PrfPrc: [lægdur, lægaður]
+    læga+V+PrfPrc+Msc+Sg+Nom+Indef: [lægdur, lægaður]
 
   Verb - læga: # 
     skeina+V+Inf: skeina
@@ -23,4 +23,4 @@ Tests:
     skeina+V+Ind+Prt+Sg: [skeindi, skeinaði]
     skeina+V+Ind+Prt+Pl: [skeindu, skeinaðu]
     skeina+V+Sup: [skeint, skeinað]
-    skeina+V+PrfPrc: [skeindur, skeinaður]
+    skeina+V+PrfPrc+Msc+Sg+Nom+Indef: [skeindur, skeinaður]
