--- a/test/src/gt-norm-yamls/V-s20_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s20_gt-norm.yaml
@@ -16,5 +16,5 @@ Tests:
     leggja+V+Ind+Prt+Sg: legði
     leggja+V+Ind+Prt+Pl: løgdu
     leggja+V+Sup: lagt
-    leggja+V+PrfPrc: lagdur
+    leggja+V+PrfPrc+Msc+Sg+Nom+Indef: lagdur
     leggja+V+Inf: leggja
