--- a/test/src/gt-norm-yamls/V-s25_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s25_gt-norm.yaml
@@ -15,4 +15,4 @@ Tests:
     liva+V+Ind+Prt+Sg: livdi
     liva+V+Ind+Prt+Pl: livdu
     liva+V+Sup: livað
-    liva+V+PrfPrc: livaður
+    liva+V+PrfPrc+Msc+Sg+Nom+Indef: livaður
