--- a/test/src/gt-norm-yamls/V-s28x30_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s28x30_gt-norm.yaml
@@ -15,4 +15,4 @@ Tests:
     skaða+V+Ind+Prt+Sg: [skaddi, skaðaði]
     skaða+V+Ind+Prt+Pl: [skaddu, skaðaðu]
     skaða+V+Sup: [skatt, skaðað]
-    skaða+V+PrfPrc: [skaddur, skaðaður]
+    skaða+V+PrfPrc+Msc+Sg+Nom+Indef: [skaddur, skaðaður]
