--- a/test/src/gt-norm-yamls/V-s2x1_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s2x1_gt-norm.yaml
@@ -15,4 +15,4 @@ Tests:
     mæla+V+Ind+Prt+Sg: mældi
     mæla+V+Ind+Prt+Pl: [mæltu, mældu]
     mæla+V+Sup: mælt
-    mæla+V+PrfPrc: mældur
+    mæla+V+PrfPrc+Msc+Sg+Nom+Indef: mældur
