--- a/test/src/gt-norm-yamls/V-s2x30_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s2x30_gt-norm.yaml
@@ -15,4 +15,4 @@ Tests:
     skjóla+V+Ind+Prt+Sg: [skjólaði, skjólti]
     skjóla+V+Ind+Prt+Pl: [skjóltu, skjólaðu]
     skjóla+V+Sup: [skjólt, skjólað]
-    skjóla+V+PrfPrc: [skjóltur, skjólaður]
+    skjóla+V+PrfPrc+Msc+Sg+Nom+Indef: [skjóltur, skjólaður]
