--- a/test/src/gt-norm-yamls/V-s30_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s30_gt-norm.yaml
@@ -15,4 +15,4 @@ Tests:
     mekanisera+V+Ind+Prt+Sg: mekaniseraði
     mekanisera+V+Ind+Prt+Pl: mekaniseraðu
     mekanisera+V+Sup: mekaniserað
-    mekanisera+V+PrfPrc: mekaniseraður
+    mekanisera+V+PrfPrc+Msc+Sg+Nom+Indef: mekaniseraður
