--- a/test/src/gt-norm-yamls/V-s30x6_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s30x6_gt-norm.yaml
@@ -15,4 +15,4 @@ Tests:
     varða+V+Ind+Prt+Sg: [vardaði, vardi]
     varða+V+Ind+Prt+Pl: [vardaðu, vardu]
     varða+V+Sup: [vardað, vart]
-    varða+V+PrfPrc: [vardaður, vardur]
+    varða+V+PrfPrc+Msc+Sg+Nom+Indef: [vardaður, vardur]
