--- a/test/src/gt-norm-yamls/V-s3x30_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s3x30_gt-norm.yaml
@@ -15,4 +15,4 @@ Tests:
     skreiða+V+Ind+Prt+Sg: [skreiddi, skreiðaði]
     skreiða+V+Ind+Prt+Pl: [skreiddu, skreiðaðu]
     skreiða+V+Sup: [skreitt, skreiðað]
-    skreiða+V+PrfPrc: [skreiddur, skreiðaður]
+    skreiða+V+PrfPrc+Msc+Sg+Nom+Indef: [skreiddur, skreiðaður]
