--- a/test/src/gt-norm-yamls/V-s4_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s4_gt-norm.yaml
@@ -14,4 +14,4 @@ Tests:
     doya+V+Ind+Prt+Sg: doyddi
     doya+V+Ind+Prt+Pl: doyddu
     doya+V+Sup: doytt
-    doya+V+PrfPrc: doyddur
+    doya+V+PrfPrc+Msc+Sg+Nom+Indef: doyddur
