--- a/test/src/gt-norm-yamls/V-s5x30_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s5x30_gt-norm.yaml
@@ -15,4 +15,4 @@ Tests:
     avhenda+V+Ind+Prt+Sg: [avhendi, avhendaði]
     avhenda+V+Ind+Prt+Pl: [avhendu, avhendaðu]
     avhenda+V+Sup: [avhent, avhendað]
-    avhenda+V+PrfPrc: [avhendur, avhendaður]
+    avhenda+V+PrfPrc+Msc+Sg+Nom+Indef: [avhendur, avhendaður]
