--- a/test/src/gt-norm-yamls/V-s68_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s68_gt-norm.yaml
@@ -14,4 +14,4 @@ Tests:
     hvørva+V+Ind+Prs+3Sg: hvørvir
     hvørva+V+Ind+Prt+Sg: [hvørvdi, hvørvdu]
     hvørva+V+Sup: hvørvt
-    hvørva+V+PrfPrc: hvørvdur
+    hvørva+V+PrfPrc+Msc+Sg+Nom+Indef: hvørvdur
