--- a/test/src/gt-norm-yamls/V-s6_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s6_gt-norm.yaml
@@ -15,4 +15,4 @@ Tests:
     hirða+V+Ind+Prt+Sg: hirdi
     hirða+V+Ind+Prt+Pl: hirdu
     hirða+V+Sup: hirt
-    hirða+V+PrfPrc: hirdur
+    hirða+V+PrfPrc+Msc+Sg+Nom+Indef: hirdur
