--- a/test/src/gt-norm-yamls/V-s6x30_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s6x30_gt-norm.yaml
@@ -15,4 +15,4 @@ Tests:
     vanyrða+V+Ind+Prt+Sg: vanyrdi
     vanyrða+V+Ind+Prt+Pl: vanyrdu
     vanyrða+V+Sup: vanyrt
-    vanyrða+V+PrfPrc: vanyrdur
+    vanyrða+V+PrfPrc+Msc+Sg+Nom+Indef: vanyrdur
