--- a/test/src/gt-norm-yamls/V-s70_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s70_gt-norm.yaml
@@ -15,4 +15,4 @@ Tests:
     siga+V+Ind+Prt+3Sg: segði
     siga+V+Ind+Prt+Pl: søgdu
     siga+V+Sup: sagt
-    siga+V+PrfPrc: sagdur
+    siga+V+PrfPrc+Msc+Sg+Nom+Indef: sagdur
