--- a/test/src/gt-norm-yamls/V-s73_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s73_gt-norm.yaml
@@ -15,4 +15,4 @@ Tests:
     læa+V+Ind+Prt+Sg: læaði
     læa+V+Ind+Prt+Pl: læaðu
     læa+V+Sup: læað
-    læa+V+PrfPrc: læaður
+    læa+V+PrfPrc+Msc+Sg+Nom+Indef: læaður
