--- a/test/src/gt-norm-yamls/V-s8_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s8_gt-norm.yaml
@@ -15,7 +15,7 @@ Tests:
     bekenna+V+Ind+Prt+Sg: bekendi
     bekenna+V+Ind+Prt+Pl: bekendu
     bekenna+V+Sup: bekent
-    bekenna+V+PrfPrc: bekendur
+    bekenna+V+PrfPrc+Msc+Sg+Nom+Indef: bekendur
 
   Verb - brenna: # 
     brenna+V+Inf: brenna
@@ -23,7 +23,7 @@ Tests:
     brenna+V+Ind+Prt+Sg: brendi
     brenna+V+Ind+Prt+Pl: brendu
     brenna+V+Sup: brent
-    brenna+V+PrfPrc: brendur
+    brenna+V+PrfPrc+Msc+Sg+Nom+Indef: brendur
 
   Verb - brynna: # 
     brynna+V+Inf: brynna
@@ -31,4 +31,4 @@ Tests:
     brynna+V+Ind+Prt+Sg: bryndi
     brynna+V+Ind+Prt+Pl: bryndu
     brynna+V+Sup: brynt
-    brynna+V+PrfPrc: bryndur
+    brynna+V+PrfPrc+Msc+Sg+Nom+Indef: bryndur
