--- a/test/src/gt-norm-yamls/V-s8x30_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s8x30_gt-norm.yaml
@@ -13,4 +13,4 @@ Tests:
     glimma+V+Ind+Prt+Sg: [glimdi, glimmaði]
     glimma+V+Ind+Prt+Pl: [glimdu, glimmaðu]
     glimma+V+Sup: [glimt glimmað]
-    glimma+V+PrfPrc: [glimdur, glimmaður]
+    glimma+V+PrfPrc+Msc+Sg+Nom+Indef: [glimdur, glimmaður]
