--- a/test/src/gt-norm-yamls/V-s9_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s9_gt-norm.yaml
@@ -15,5 +15,5 @@ Tests:
     klippa+V+Ind+Prt+Sg: klipti
     klippa+V+Ind+Prt+Pl: kliptu
     klippa+V+Sup: klipt
-    klippa+V+PrfPrc: kliptur
+    klippa+V+PrfPrc+Msc+Sg+Nom+Indef: kliptur
 
