--- a/test/src/gt-norm-yamls/V-s9x30_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s9x30_gt-norm.yaml
@@ -15,4 +15,4 @@ Tests:
     stilla+V+Ind+Prt+Sg: [stilti, stillaði]
     stilla+V+Ind+Prt+Pl: [stiltu, stillaðu]
     stilla+V+Sup: [stilt, stillað]
-    stilla+V+PrfPrc: [stiltur, stillaður]
+    stilla+V+PrfPrc+Msc+Sg+Nom+Indef: [stiltur, stillaður]
