--- a/test/src/gt-norm-yamls/V-s12_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s12_gt-norm.yaml
@@ -15,4 +15,4 @@ Tests:
     boyggja+V+Ind+Prt+Sg: boygdi
     boyggja+V+Ind+Prt+Pl: boygdu
     boyggja+V+Sup: boygt
-    boyggja+V+PrfPrc: boygdur
+    boyggja+V+PrfPrc+Msc+Sg+Nom+Indef: boygdur
