--- a/test/src/gt-norm-yamls/V-s18_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s18_gt-norm.yaml
@@ -15,4 +15,4 @@ Tests:
     krevja+V+Ind+Prt+Sg: kravdi
     krevja+V+Ind+Prt+Pl: kravdu
     krevja+V+Sup: kravt
-    krevja+V+PrfPrc: kravdur
+    krevja+V+PrfPrc+Msc+Sg+Nom+Indef: kravdur
