--- a/test/src/gt-norm-yamls/V-s31_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s31_gt-norm.yaml
@@ -15,5 +15,5 @@ Tests:
     gera+v1+V+Ind+Prt+Sg: gjørdi
     gera+v1+V+Ind+Prt+Pl: gjørdu
     gera+v1+V+Sup: gjørt
-    gera+v1+V+PrfPrc: gjørdur
+    gera+v1+V+PrfPrc+Msc+Sg+Nom+Indef: gjørdur
 
