--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ Makefile
 /tools/spellcheckers/filters/remove-usage-tags.regex
 /tools/spellcheckers/weights/*.clean.txt
 /tools/spellcheckers/easteregg.*
+tools/grammarcheckers/filters/make-desktopspeller-CG-tags.regex
