Update tag +Prt+Sg to +Prt+3Sg
We had split the number-only tag but not updated yaml.

--- a/test/src/gt-norm-yamls/V-s10_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s10_gt-norm.yaml
@@ -12,7 +12,7 @@ Tests:
   Verb - elgja: # 
     elgja+V+Inf: elgja
     elgja+V+Ind+Prs+3Sg: elgir
-    elgja+V+Ind+Prt+Sg: elgdi
+    elgja+V+Ind+Prt+3Sg: elgdi
     elgja+V+Ind+Prt+Pl: elgdu
     elgja+V+Sup: elgt
     elgja+V+PrfPrc+Msc+Sg+Nom+Indef: elgdur
@@ -20,7 +20,7 @@ Tests:
   Verb - belgja: # 
     belgja+V+Inf: belgja
     belgja+V+Ind+Prs+3Sg: belgir
-    belgja+V+Ind+Prt+Sg: belgdi
+    belgja+V+Ind+Prt+3Sg: belgdi
     belgja+V+Ind+Prt+Pl: belgdu
     belgja+V+Sup: belgt
     belgja+V+PrfPrc+Msc+Sg+Nom+Indef: belgdur
