--- a/test/src/gt-norm-yamls/V-s11_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s11_gt-norm.yaml
@@ -12,14 +12,14 @@ Tests:
   Verb - vakja: # 
     vakja+V+Inf: vakja
     vakja+V+Ind+Prs+3Sg: vakir
-    vakja+V+Ind+Prt+Sg: vakti
+    vakja+V+Ind+Prt+3Sg: vakti
     vakja+V+Ind+Prt+Pl: vaktu
     vakja+V+Sup: vakt
 
   Verb - roykja: # 
     roykja+V+Inf: roykja
     roykja+V+Ind+Prs+3Sg: roykir
-    roykja+V+Ind+Prt+Sg: roykti
+    roykja+V+Ind+Prt+3Sg: roykti
     roykja+V+Ind+Prt+Pl: royktu
     roykja+V+Sup: roykt
     roykja+V+PrfPrc+Msc+Sg+Nom+Indef: royktur
