--- a/test/src/gt-norm-yamls/V-s12_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s12_gt-norm.yaml
@@ -12,7 +12,7 @@ Tests:
   Verb - boyggja: # 
     boyggja+V+Inf: boyggja
     boyggja+V+Ind+Prs+3Sg: boyggir
-    boyggja+V+Ind+Prt+Sg: boygdi
+    boyggja+V+Ind+Prt+3Sg: boygdi
     boyggja+V+Ind+Prt+Pl: boygdu
     boyggja+V+Sup: boygt
     boyggja+V+PrfPrc+Msc+Sg+Nom+Indef: boygdur
