--- a/test/src/gt-norm-yamls/V-s13_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s13_gt-norm.yaml
@@ -12,7 +12,7 @@ Tests:
   Verb - søkja: # 
     søkkja+V+Inf: søkkja
     søkkja+V+Ind+Prs+3Sg: søkkir
-    søkja+V+Ind+Prt+Sg: søkti
+    søkja+V+Ind+Prt+3Sg: søkti
     søkja+V+Ind+Prt+Pl: søktu
     søkja+V+Sup: søkt
     søkja+V+PrfPrc+Msc+Sg+Nom+Indef: søktur
