--- a/test/src/gt-norm-yamls/V-s18x16_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s18x16_gt-norm.yaml
@@ -10,7 +10,7 @@ Config:
 Tests:
 
   Verb - vekja: # 
-    vekja+V+Ind+Prt+Sg: vakti
+    vekja+V+Ind+Prt+3Sg: vakti
     vekja+V+Ind+Prt+Pl: vaktu
     vekja+V+Sup: vakt
     vekja+V+PrfPrc+Msc+Sg+Nom+Indef: vaktur
