--- a/test/src/gt-norm-yamls/V-s19_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s19_gt-norm.yaml
@@ -12,7 +12,7 @@ Tests:
   Verb - dylja: # 
     dylja+V+Inf: dylja
     dylja+V+Ind+Prs+3Sg: dylur
-    dylja+V+Ind+Prt+Sg: duldi
+    dylja+V+Ind+Prt+3Sg: duldi
     dylja+V+Ind+Prt+Pl: duldu
     dylja+V+Sup: dult
     dylja+V+PrfPrc+Msc+Sg+Nom+Indef: duldur
