--- a/test/src/gt-norm-yamls/V-s1_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s1_gt-norm.yaml
@@ -12,7 +12,7 @@ Tests:
   Verb - baga: # 
     baga+V+Inf: baga
     baga+V+Ind+Prs+3Sg: bagir
-    baga+V+Ind+Prt+Sg: bagdi
+    baga+V+Ind+Prt+3Sg: bagdi
     baga+V+Ind+Prt+Pl: bagdu
     baga+V+Sup: bagt
     baga+V+PrfPrc+Msc+Sg+Nom+Indef: bagdur
