--- a/test/src/gt-norm-yamls/V-s1x30_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s1x30_gt-norm.yaml
@@ -12,7 +12,7 @@ Tests:
   Verb - læga: # 
     læga+V+Inf: læga
     læga+V+Ind+Prs+3Sg: [lægir, lægar]
-    læga+V+Ind+Prt+Sg: lægdi, lægaði]
+    læga+V+Ind+Prt+3Sg: lægdi, lægaði]
     læga+V+Ind+Prt+Pl: [lægdu, lægaðu]
     læga+V+Sup: [lægt, lægað]
     læga+V+PrfPrc+Msc+Sg+Nom+Indef: [lægdur, lægaður]
@@ -20,7 +20,7 @@ Tests:
   Verb - læga: # 
     skeina+V+Inf: skeina
     skeina+V+Ind+Prs+3Sg: [skeinir, skeinar]
-    skeina+V+Ind+Prt+Sg: [skeindi, skeinaði]
+    skeina+V+Ind+Prt+3Sg: [skeindi, skeinaði]
     skeina+V+Ind+Prt+Pl: [skeindu, skeinaðu]
     skeina+V+Sup: [skeint, skeinað]
     skeina+V+PrfPrc+Msc+Sg+Nom+Indef: [skeindur, skeinaður]
