--- a/test/src/gt-norm-yamls/V-s23_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s23_gt-norm.yaml
@@ -12,5 +12,5 @@ Tests:
   Verb - smyrja: # 
     smyrja+V+Inf: smyrja
     smyrja+V+Ind+Prs+3Sg: smyr
-    smyrja+V+Ind+Prt+Sg: smurdi
+    smyrja+V+Ind+Prt+3Sg: smurdi
     smyrja+V+Ind+Prt+Pl: smurdu
