--- a/test/src/gt-norm-yamls/V-s24_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s24_gt-norm.yaml
@@ -12,6 +12,6 @@ Tests:
   Verb - flysa: # 
     flysa+V+Inf: flysa
     flysa+V+Ind+Prs+3Sg: flysur
-    flysa+V+Ind+Prt+Sg: flusti
+    flysa+V+Ind+Prt+3Sg: flusti
     flysa+V+Ind+Prt+Pl: flustu
     flysa+V+Sup: flust
