--- a/test/src/gt-norm-yamls/V-s25_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s25_gt-norm.yaml
@@ -12,7 +12,7 @@ Tests:
   Verb - liva: # 
     liva+V+Inf: liva
     liva+V+Ind+Prs+3Sg: livir
-    liva+V+Ind+Prt+Sg: livdi
+    liva+V+Ind+Prt+3Sg: livdi
     liva+V+Ind+Prt+Pl: livdu
     liva+V+Sup: livað
     liva+V+PrfPrc+Msc+Sg+Nom+Indef: livaður
