--- a/test/src/gt-norm-yamls/V-s26_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s26_gt-norm.yaml
@@ -12,6 +12,6 @@ Tests:
   Verb - plaga: # 
     plaga+V+Inf: plaga
     plaga+V+Ind+Prs+3Sg: plagar
-    plaga+V+Ind+Prt+Sg: plagdi
+    plaga+V+Ind+Prt+3Sg: plagdi
     plaga+V+Ind+Prt+Pl: plagdu
     plaga+V+Sup: plagað
