--- a/test/src/gt-norm-yamls/V-s29_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s29_gt-norm.yaml
@@ -12,6 +12,6 @@ Tests:
   Verb - brúka: # 
     brúka+V+Inf: brúka
     brúka+V+Ind+Prs+3Sg: brúkar
-    brúka+V+Ind+Prt+Sg: brúkti
+    brúka+V+Ind+Prt+3Sg: brúkti
     brúka+V+Ind+Prt+Pl: brúktu
     brúka+V+Sup: brúkt
