--- a/test/src/gt-norm-yamls/V-s2_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s2_gt-norm.yaml
@@ -12,5 +12,5 @@ Tests:
   Verb - beita: # 
     beita+V+Inf: beita
     beita+V+Ind+Prs+3Sg: beitir
-    beita+V+Ind+Prt+Sg: beitti
+    beita+V+Ind+Prt+3Sg: beitti
     beita+V+Ind+Prt+Pl: beittu
