--- a/test/src/gt-norm-yamls/V-s2x30_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s2x30_gt-norm.yaml
@@ -12,7 +12,7 @@ Tests:
   Verb - skjóla: # 
     skjóla+V+Inf: skjóla
     skjóla+V+Ind+Prs+3Sg: [skjólir, skjólar]
-    skjóla+V+Ind+Prt+Sg: [skjólaði, skjólti]
+    skjóla+V+Ind+Prt+3Sg: [skjólaði, skjólti]
     skjóla+V+Ind+Prt+Pl: [skjóltu, skjólaðu]
     skjóla+V+Sup: [skjólt, skjólað]
     skjóla+V+PrfPrc+Msc+Sg+Nom+Indef: [skjóltur, skjólaður]
