--- a/test/src/gt-norm-yamls/V-s30x6_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s30x6_gt-norm.yaml
@@ -12,7 +12,7 @@ Tests:
   Verb - varða: # 
     varða+V+Inf: varða
     varða+V+Ind+Prs+Sg: [varðar, varðir]
-    varða+V+Ind+Prt+Sg: [vardaði, vardi]
+    varða+V+Ind+Prt+3Sg: [vardaði, vardi]
     varða+V+Ind+Prt+Pl: [vardaðu, vardu]
     varða+V+Sup: [vardað, vart]
     varða+V+PrfPrc+Msc+Sg+Nom+Indef: [vardaður, vardur]
