--- a/test/src/gt-norm-yamls/V-s30x9_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s30x9_gt-norm.yaml
@@ -12,7 +12,7 @@ Tests:
   Verb - kippa: # 
     kippa+V+Inf: kippa
     kippa+V+Ind+Prs+3Sg: [kippar, kippir]
-    kippa+V+Ind+Prt+Sg: [kippaði, kipti]
+    kippa+V+Ind+Prt+3Sg: [kippaði, kipti]
     kippa+V+Ind+Prt+Pl: [kippaðu, kiptu]
     kippa+V+Sup: [kippað, kipt]
     kippa+V+PrsPrf: [kippaður, kiptur]
