--- a/test/src/gt-norm-yamls/V-s3x30_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s3x30_gt-norm.yaml
@@ -12,7 +12,7 @@ Tests:
   Verb - æra: # 
     skreiða+V+Inf: skreiða
     skreiða+V+Ind+Prs+3Sg: [skreiðir, skreiðar]
-    skreiða+V+Ind+Prt+Sg: [skreiddi, skreiðaði]
+    skreiða+V+Ind+Prt+3Sg: [skreiddi, skreiðaði]
     skreiða+V+Ind+Prt+Pl: [skreiddu, skreiðaðu]
     skreiða+V+Sup: [skreitt, skreiðað]
     skreiða+V+PrfPrc+Msc+Sg+Nom+Indef: [skreiddur, skreiðaður]
