--- a/test/src/gt-norm-yamls/V-s5x30_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s5x30_gt-norm.yaml
@@ -12,7 +12,7 @@ Tests:
   Verb - avhenda: # 
     avhenda+V+Inf: avhenda
     avhenda+V+Ind+Prs+3Sg: [avhendir, avhendar]
-    avhenda+V+Ind+Prt+Sg: [avhendi, avhendaði]
+    avhenda+V+Ind+Prt+3Sg: [avhendi, avhendaði]
     avhenda+V+Ind+Prt+Pl: [avhendu, avhendaðu]
     avhenda+V+Sup: [avhent, avhendað]
     avhenda+V+PrfPrc+Msc+Sg+Nom+Indef: [avhendur, avhendaður]
