--- a/test/src/gt-norm-yamls/V-s68_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s68_gt-norm.yaml
@@ -12,6 +12,6 @@ Tests:
   Verb - æra: # 
     hvørva+V+Inf: hvørva
     hvørva+V+Ind+Prs+3Sg: hvørvir
-    hvørva+V+Ind+Prt+Sg: [hvørvdi, hvørvdu]
+    hvørva+V+Ind+Prt+3Sg: [hvørvdi, hvørvdu]
     hvørva+V+Sup: hvørvt
     hvørva+V+PrfPrc+Msc+Sg+Nom+Indef: hvørvdur
