--- a/test/src/gt-norm-yamls/V-s6_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s6_gt-norm.yaml
@@ -12,7 +12,7 @@ Tests:
   Verb - hirða: # 
     hirða+V+Inf: hirða
     hirða+V+Ind+Prs+3Sg: hirðir
-    hirða+V+Ind+Prt+Sg: hirdi
+    hirða+V+Ind+Prt+3Sg: hirdi
     hirða+V+Ind+Prt+Pl: hirdu
     hirða+V+Sup: hirt
     hirða+V+PrfPrc+Msc+Sg+Nom+Indef: hirdur
