--- a/test/src/gt-norm-yamls/V-s6x30_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s6x30_gt-norm.yaml
@@ -12,7 +12,7 @@ Tests:
   Verb - vanyrða: # 
     vanyrða+V+Inf: vanyrða
     vanyrða+V+Ind+Prs+3Sg: [vanyrðir, vanyrðar]
-    vanyrða+V+Ind+Prt+Sg: vanyrdi
+    vanyrða+V+Ind+Prt+3Sg: vanyrdi
     vanyrða+V+Ind+Prt+Pl: vanyrdu
     vanyrða+V+Sup: vanyrt
     vanyrða+V+PrfPrc+Msc+Sg+Nom+Indef: vanyrdur
