--- a/test/src/gt-norm-yamls/V-s71_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s71_gt-norm.yaml
@@ -11,6 +11,6 @@ Tests:
 
   Verb - skerja: # 
     skerja+V+Inf: skerja
-    skerja+V+Ind+Prt+Sg: skerdi
+    skerja+V+Ind+Prt+3Sg: skerdi
     skerja+V+Ind+Prt+Pl: skerdu
     skerja+V+Inf: skerja
