--- a/test/src/gt-norm-yamls/V-s9_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s9_gt-norm.yaml
@@ -12,7 +12,7 @@ Tests:
   Verb - klippa: # 
     klippa+V+Inf: klippa
     klippa+V+Ind+Prs+3Sg: klippir
-    klippa+V+Ind+Prt+Sg: klipti
+    klippa+V+Ind+Prt+3Sg: klipti
     klippa+V+Ind+Prt+Pl: kliptu
     klippa+V+Sup: klipt
     klippa+V+PrfPrc+Msc+Sg+Nom+Indef: kliptur
