--- a/test/src/gt-norm-yamls/V-s17_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s17_gt-norm.yaml
@@ -11,7 +11,7 @@ Tests:
 
   Verb - berja: # 
     berja+V+Inf: berja
-    berja+V+Ind+Prt+Sg: bardi
+    berja+V+Ind+Prt+3Sg: bardi
     berja+V+Ind+Prt+Pl: bardu
     berja+V+Sup: bart
     berja+V+PrfPrc+Msc+Sg+Nom+Indef: bardur
