--- a/test/src/gt-norm-yamls/V-s20_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s20_gt-norm.yaml
@@ -13,7 +13,7 @@ Tests:
     leggja+V+Inf: leggja
     leggja+V+Inf: leggja
     leggja+V+Ind+Prs+3Sg: leggur
-    leggja+V+Ind+Prt+Sg: legði
+    leggja+V+Ind+Prt+3Sg: legði
     leggja+V+Ind+Prt+Pl: løgdu
     leggja+V+Sup: lagt
     leggja+V+PrfPrc+Msc+Sg+Nom+Indef: lagdur
