--- a/test/src/gt-norm-yamls/V-s8_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s8_gt-norm.yaml
@@ -12,7 +12,7 @@ Tests:
   Verb - bekenna: # 
     bekenna+V+Inf: bekenna
     bekenna+V+Ind+Prs+3Sg: bekennir
-    bekenna+V+Ind+Prt+Sg: bekendi
+    bekenna+V+Ind+Prt+3Sg: bekendi
     bekenna+V+Ind+Prt+Pl: bekendu
     bekenna+V+Sup: bekent
     bekenna+V+PrfPrc+Msc+Sg+Nom+Indef: bekendur
@@ -20,7 +20,7 @@ Tests:
   Verb - brenna: # 
     brenna+V+Inf: brenna
     brenna+V+Ind+Prs+3Sg: brennir
-    brenna+V+Ind+Prt+Sg: brendi
+    brenna+V+Ind+Prt+3Sg: brendi
     brenna+V+Ind+Prt+Pl: brendu
     brenna+V+Sup: brent
     brenna+V+PrfPrc+Msc+Sg+Nom+Indef: brendur
@@ -28,7 +28,7 @@ Tests:
   Verb - brynna: # 
     brynna+V+Inf: brynna
     brynna+V+Ind+Prs+3Sg: brynnir
-    brynna+V+Ind+Prt+Sg: bryndi
+    brynna+V+Ind+Prt+3Sg: bryndi
     brynna+V+Ind+Prt+Pl: bryndu
     brynna+V+Sup: brynt
     brynna+V+PrfPrc+Msc+Sg+Nom+Indef: bryndur
