Tag correction: Sg is 3Sg.

--- a/test/src/gt-norm-yamls/V-s30x6_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s30x6_gt-norm.yaml
@@ -11,7 +11,7 @@ Tests:
 
   Verb - varða: # 
     varða+V+Inf: varða
-    varða+V+Ind+Prs+Sg: [varðar, varðir]
+    varða+V+Ind+Prs+3Sg: [varðar, varðir]
     varða+V+Ind+Prt+3Sg: [vardaði, vardi]
     varða+V+Ind+Prt+Pl: [vardaðu, vardu]
     varða+V+Sup: [vardað, vart]
