--- a/test/src/gt-norm-yamls/V-s1_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s1_gt-norm.yaml
@@ -16,3 +16,9 @@ Tests:
     baga+V+Ind+Prt+Pl: bagdu
     baga+V+Sup: bagt
     baga+V+PrfPtc+Msc+Sg+Nom+Indef: bagdur
+
+    hvørva+v2+V+Inf: hvørva
+    hvørva+v2+V+Ind+Prs+3Sg: hvørvir
+    hvørva+v2+V+Ind+Prt+3Sg: [hvørvdi, hvørvdu]
+    hvørva+v2+V+Sup: hvørvt
+    hvørva+v2+V+PrfPtc+Msc+Sg+Nom+Indef: hvørvdur
