--- a/test/src/gt-norm-yamls/V-s68_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s68_gt-norm.yaml
@@ -9,9 +9,9 @@ Config:
 
 Tests:
 
-  Verb - æra: # 
-    hvørva+V+Inf: hvørva
-    hvørva+V+Ind+Prs+3Sg: hvørvir
-    hvørva+V+Ind+Prt+3Sg: [hvørvdi, hvørvdu]
-    hvørva+V+Sup: hvørvt
-    hvørva+V+PrfPtc+Msc+Sg+Nom+Indef: hvørvdur
+  Verb - hvørva: # 
+    hvørva+v1+V+Inf: hvørva
+    hvørva+v1+V+Ind+Prs+3Sg: hvørvur
+    hvørva+v1+V+Ind+Prt+3Sg: hvarv
+    hvørva+v1+V+Sup: horvið
+    hvørva+v1+V+PrfPtc+Msc+Sg+Nom+Indef: horvin
