--- a/test/src/gt-norm-yamls/V-verbs_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-verbs_gt-norm.yaml
@@ -846,11 +846,6 @@ Tests:
     fløða+V+Inf: fløða
     fløða+V+PrfPtc+Msc+Sg+Nom+Indef: fløddur
     fløða+V+Sup: fløtt
-    flúga+V+Ind+Prs+3Sg: flýgur
-    flúga+V+Ind+Prt+3Sg: fleyg
-    flúga+V+Ind+Prt+Pl: flugu
-    flúga+V+Inf: flúga
-    flúga+V+Sup: flogið
     flúgva+V+Ind+Prs+3Sg: flýgur
     flúgva+V+Ind+Prt+3Sg: fleyg
     flúgva+V+Ind+Prt+Pl: flugu
@@ -1107,12 +1102,13 @@ Tests:
     gella+V+Inf: gella
     gella+V+PrfPtc+Msc+Sg+Nom+Indef: geldur
     gella+V+Sup: gelt
-    gera+V+Ind+Prs+3Sg: ger
-    gera+V+Ind+Prt+Pl: gjørdu
-    gera+V+Ind+Prt+3Sg: gjørdi
-    gera+V+Inf: gera
-    gera+V+PrfPtc+Msc+Sg+Nom+Indef: gjørdur
-    gera+V+Sup: gjørt
+    gera+v1+V+Ind+Prs+3Sg: ger
+    gera+v1+V+Ind+Prt+Pl: gjørdu
+    gera+v1+V+Ind+Prt+3Sg: gjørdi
+    gera+v1+V+Inf: gera
+    gera+v1+V+PrfPtc+Msc+Sg+Nom+Indef: gjørdur
+    gera+v2+V+Inf: g
+    gera+v2+V+Ind+Prt+3SG: geraði
     gerða+V+Ind+Prs+3Sg: gerðir
     gerða+V+Ind+Prt+Pl: gerdu
     gerða+V+Ind+Prt+3Sg: gerdi
@@ -4320,9 +4316,9 @@ Tests:
     vísa+V+Sup: víst
     ynna+V+Ind+Prs+3Sg: [ynnar, ynnir]
     ynna+V+Ind+Prt+Pl: [ynnaðu, yntu]
-    ynna+V+Ind+Prt+3Sg: ynnaði
+    ynna+V+Ind+Prt+3Sg: [ynnaði, ynti]
     ynna+V+Inf: ynna
-    ynna+V+PrfPtc+Msc+Sg+Nom+Indef: ynnaður
+    ynna+V+PrfPtc+Msc+Sg+Nom+Indef: [ynnaður, yntur]
     ynna+V+Sup: [ynnað, ynt]
     yppa+V+Ind+Prs+3Sg: [yppar, yppir]
     yppa+V+Ind+Prt+Pl: [yppaðu, yptu]
