--- a/test/src/gt-norm-yamls/N-h7_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/N-h7_gt-norm.yaml
@@ -13,15 +13,15 @@ Tests:
     bræv+N+Neu+Sg+Acc+Indef: bræv
     bræv+N+Neu+Sg+Dat+Indef: brævi
     bræv+N+Neu+Sg+Gen+Indef: brævs
-    bræv+N+Neu+Pl+Nom+Indef: brøv
-    bræv+N+Neu+Pl+Acc+Indef: brøv
-    bræv+N+Neu+Pl+Dat+Indef: brøvum
+    bræv+N+Neu+Pl+Nom+Indef: [brøv, bræv]
+    bræv+N+Neu+Pl+Acc+Indef: [brøv, bræv]
+    bræv+N+Neu+Pl+Dat+Indef: [brøvum, brævum]
     bræv+N+Neu+Pl+Gen+Indef: bræva
     bræv+N+Neu+Sg+Nom+Def: brævið
     bræv+N+Neu+Sg+Acc+Def: brævið
     bræv+N+Neu+Sg+Dat+Def: brævinum
     bræv+N+Neu+Sg+Gen+Def: brævsins
-    bræv+N+Neu+Pl+Nom+Def: brøvini
-    bræv+N+Neu+Pl+Acc+Def: brøvini
-    bræv+N+Neu+Pl+Dat+Def: brøvunum
+    bræv+N+Neu+Pl+Nom+Def: [brøvini, brævini]
+    bræv+N+Neu+Pl+Acc+Def: [brøvini, brævini]
+    bræv+N+Neu+Pl+Dat+Def: [brøvunum, brævunum]
     bræv+N+Neu+Pl+Gen+Def: brævanna
