--- a/test/src/gt-norm-yamls/V-s41_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s41_gt-norm.yaml
@@ -10,12 +10,12 @@ Config:
 Tests:
 
   Verb - flúga: # 
-    flúga+V+Inf: flúga
-    flúga+V+Ind+Prs+3Sg: flýgur
-    flúga+V+Ind+Prt+3Sg: fleyg
-    flúga+V+Ind+Prt+Pl: flugu
-    flúga+V+Sup: flogið
-
+#    flúga+V+Inf: flúga
+#    flúga+V+Ind+Prs+3Sg: flýgur
+#    flúga+V+Ind+Prt+3Sg: fleyg
+#    flúga+V+Ind+Prt+Pl: flugu
+#    flúga+V+Sup: flogið
+#
   Verb - flúgva: # 
     flúgva+V+Inf: flúgva
     flúgva+V+Ind+Prs+3Sg: flýgur
