Skriv alternative former med komma, ikkje med /

--- a/test/src/gt-norm-yamls/A-l1_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/A-l1_gt-norm.yaml
@@ -71,16 +71,16 @@ Tests:
     beinur+A+Superl+Msc+Pl+Nom+Indef: beinastir
     beinur+A+Superl+Msc+Pl+Acc+Indef: beinastar
     beinur+A+Superl+Msc+Pl+Dat+Indef: beinastum
-    beinur+A+Superl+Msc+Pl+Gen+Indef: beinasta/ra
+    beinur+A+Superl+Msc+Pl+Gen+Indef: [beinasta, beinara]
 
     beinur+A+Superl+Fem+Sg+Nom+Indef: beinast
     beinur+A+Superl+Fem+Sg+Acc+Indef: beinasta
     beinur+A+Superl+Fem+Sg+Dat+Indef: beinastari
-    beinur+A+Superl+Fem+Sg+Gen+Indef: beinastar/rar
+    beinur+A+Superl+Fem+Sg+Gen+Indef: [beinastar, beinarar]
     beinur+A+Superl+Fem+Pl+Nom+Indef: beinastar
     beinur+A+Superl+Fem+Pl+Acc+Indef: beinastar
     beinur+A+Superl+Fem+Pl+Dat+Indef: beinastum
-    beinur+A+Superl+Fem+Pl+Gen+Indef: beinasta/ra
+    beinur+A+Superl+Fem+Pl+Gen+Indef: [beinasta, beinara]
 
     beinur+A+Superl+Neu+Sg+Nom+Indef: beinast
     beinur+A+Superl+Neu+Sg+Acc+Indef: beinast
@@ -89,7 +89,7 @@ Tests:
     beinur+A+Superl+Neu+Pl+Nom+Indef: beinast
     beinur+A+Superl+Neu+Pl+Acc+Indef: beinast
     beinur+A+Superl+Neu+Pl+Dat+Indef: beinastum
-    beinur+A+Superl+Neu+Pl+Gen+Indef: beinasta/ra
+    beinur+A+Superl+Neu+Pl+Gen+Indef: [beinasta, beinara]
 
     beinur+A+Msc+Sg+Nom+Def: beini
     beinur+A+Msc+Sg+Acc+Def: beina
