klassifisering og test beinur, bakari, kilo, hemar

--- a/test/src/gt-norm-yamls/N-h28_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/N-h28_gt-norm.yaml
@@ -19,7 +19,7 @@ Tests:
     bakarí+N+Neu+Pl+Gen+Indef: bakaría
     bakarí+N+Neu+Sg+Nom+Def: bakaríið
     bakarí+N+Neu+Sg+Acc+Def: bakaríið
-    bakarí+N+Neu+Sg+Dat+Def: bakarínum
+    bakarí+N+Neu+Sg+Dat+Def: bakaríinum
     bakarí+N+Neu+Sg+Gen+Def: bakarísins
     bakarí+N+Neu+Pl+Nom+Def: bakaríini
     bakarí+N+Neu+Pl+Acc+Def: bakaríini
